[package]
name = "native"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "1"
ayaka-model = { workspace = true }
ayaka-plugin-wasmi = { workspace = true }
serde = { workspace = true }
serde_json = "1"
dirs-next = "2"

[build-dependencies]
flutter_rust_bridge_codegen = "1"
